--- a/aboutus.html
+++ b/aboutus.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Altairtech</title>
-    <link href="./css/altait.css" rel="stylesheet" />
+    <link href="./css/aboutus.css" rel="stylesheet" />
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -13,7 +13,6 @@
       crossorigin="anonymous"
     />
   </head>
-
   <body>
     <div class="navbar-banner-container">
       <!--header start  -->
@@ -71,145 +70,98 @@
         </div>
       </nav>
     </div>
-    <!--header end  -->
-
-    <!-- Banner start -->
-
-    <div class="container">
-      <h2>Why Altair?</h2>
-      <p>
-        As a creative agency, we place the highest priority on the value we
-        deliver in all projects, big and small. At Altair, our projects are all
-        unique and driven by client needs. They require creative solutions from
-        a team drawn from a number of technology areas and diverse business
-        expertise.
-      </p>
-      <div>
-        <div class="row">
-          <div class="col-xs-12 col-sm-6 col-md-5">
-            <div class="card shadow">
-              <div class="card-body">
-                <h5 class="card-title">You.</h5>
-                <hr />
-                <p class="card-text">
-                  We enjoy working with our clients. There is no one more
-                  important. Since 1993, we start each day with an unwavering
-                  commitment to our clients’ success. Our customer service is
-                  fueled by our 30+ years’ experience delivering on time and
-                  within budget.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-xs-12 col-sm-6 col-md-4">
-            <div class="card shadow">
-              <div class="card-body">
-                <h5 class="card-title">Experience.</h5>
-                <hr />
-                <p class="card-text">
-                  We are the original web design & development company in San
-                  Antonio, Texas. We put businesses like yours on the internet
-                  for profitable gain. With 30+ years deploying technology
-                  solutions, we know how to build your application right the
-                  first time.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-xs-12 col-sm-6 col-md-3">
+    <div class="globe__css">
+      <div class="navbar-globe-container">
+        <h1
+          style="
+            color: white;
+            font-size: 90px;
+            font-weight: 300;
+            padding: 40px 120px;
+          "
+        >
+          About
+        </h1>
+        <div>
+          <div
+            class="row"
+            style="
+              color: white;
+              font-size: 12px;
+              letter-spacing: 0.7px;
+              padding: 10px 140px;
+            "
+          >
             <img
-              src="/images/home/BootstrapsImages/alters/button-getnoticed02.png"
+              src="/images/home/BootstrapsImages/about/aboutcorners01.png"
+              class="img-fluid"
+              alt="Responsive image"
+            />
+            <div class="col-sm-12 col-md-5" style="text-align: right">
+              <p>
+                Altair Technology was founded in 1993 with the goal of
+                empowering the small to mid-size enterprise with technologies
+                and tools that have enabled large organizations to achieve
+                impressive productivity gains with these e-tools.
+              </p>
+              <p>
+                These technologies and electronic tools (e-Tools) have
+                historically only been available to organizations large enough
+                to have Information Technology staffs with the expertise and
+                resources to research, choose, deploy and support new
+                technologies. Altair's mission is to make these new tools
+                available to all businesses at affordable costs.
+              </p>
+              <p>
+                Altair Consultants work in partnership with client management to
+                select the e-Tools that make sense for your business. Once a
+                technology solution is deployed Altair is ready to play the
+                support role that makes the most sense for your company.
+              </p>
+            </div>
+            <div
+              class="col-sm-none col-md-1"
+              style="margin-top: -190px; margin-left: 30px; opacity: 0.4"
+            >
+              <img
+                src="/images/home/BootstrapsImages/about/content-wrapper.gif"
+                class="img-fluid"
+                alt="Responsive image"
+              />
+            </div>
+            <div class="col-sm-12 col-md-5">
+              <p>
+                Experienced staff can manage your applications and networks
+                through remote management consoles to ensure that your
+                information systems are running properly all the time.
+              </p>
+              <p>
+                Altair is ready to host your data and applications on one of our
+                Azure Servers. Altair communication and application experts make
+                sure that your information systems are running and error-free.
+                Daily (or hourly) backups, Uninterruptible Power Supplies,
+                Broad-band secure communications, wireless access,
+                high-performance computers at a cost significantly below
+                operating in-house make Altair hosting an increasingly popular
+                option.
+              </p>
+              <p>
+                If you are contemplating a website or development project,
+                Altair has the demonstrable expertise to get you there. Contact
+                us for your consultation.
+              </p>
+            </div>
+            <img
+              src="/images/home/BootstrapsImages/about/aboutcorners02.png"
               class="img-fluid"
               alt="Responsive image"
             />
           </div>
         </div>
       </div>
-      <div>
-        <div class="row">
-          <div class="col-xs-12 col-sm-6 col-md-4">
-            <div class="card shadow">
-              <div class="card-body">
-                <h5 class="card-title">Project management.</h5>
-                <hr />
-                <p class="card-text">
-                  From the smallest to the most complex, project deliverables
-                  are managed in a workorder system down to the details. The
-                  underpinnings to every project’s success, our systematic
-                  approach to manage workflow ensures we deliver on time and
-                  inside your budget.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-xs-12 col-sm-6 col-md-4" style="margin-top: 20px">
-            <div class="card shadow">
-              <div class="card-body">
-                <h5 class="card-title">Experience.</h5>
-                <hr />
-                <p class="card-text">
-                  We are the original web design & development company in San
-                  Antonio, Texas. We put businesses like yours on the internet
-                  for profitable gain. With 30+ years deploying technology
-                  solutions, we know how to build your application right the
-                  first time.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div
-            class="col-xs-12 col-sm-6 col-md-3 custom-card"
-            style="margin-top: -60px; margin-left: 60px; margin-bottom: 20px"
-          >
-            <div class="card shadow">
-              <div class="card-body">
-                <h5 class="card-title">Every page talks to Google.</h5>
-                <hr />
-                <p class="card-text">
-                  Your website is built with every web page optimized for Google
-                  and other search engines. The layout and functionality of each
-                  page is designed to get your visitor to click on links and
-                  make a purchase, begin a relationship with your business, or
-                  go the next step.
-                </p>
-              </div>
-            </div>
-            <div
-              class="card shadow custom-card"
-              style="margin-top: 10px; width: 400px; margin-left: -200px"
-            >
-              <div class="card-body">
-                <h5 class="card-title">We're listening.</h5>
-                <hr />
-                <p class="card-text">
-                  Our approach begins with listening. A collaborative evaluation
-                  of your business processes is key. From the joint analysis
-                  flows a strategy and plan for designing and deploying your
-                  next website.
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <p>
-        Clients include: Accion Texas, Bandag, Bridgestone/Firestone, Frost
-        Bank, Port San Antonio, San Antonio Economic Development Foundation, San
-        Antonio National Bank, US Army Medical Command, US Air Force, UNAM, UTSA
-        and numerous small and mid-size companies in San Antonio and beyond. We
-        provide turnkey solutions to businesses small, mid-size, and large.
-      </p>
     </div>
-
-    <!-- Banner end -->
-
-    <!-- start footer -->
-
-    <footer class="footer">
-      <section
-        class="py-10 py-md-5 py-xl-8 border-top border-light footer__css"
-      >
+    <footer>
+      <section class="py-10 py-md-5 py-xl-8 footer__css">
         <div class="container overflow-hidden">
           <div class="row gy-4 gy-lg-0 justify-content-xl-between">
             <div class="col-12 col-md-4 col-lg-3 col-xl-2">
@@ -417,9 +369,6 @@
         </div>
       </section>
     </footer>
-
-    <!-- end footer -->
-
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
