--- a/index.html
+++ b/index.html
@@ -53,16 +53,16 @@
                   >
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Services</a>
+                  <a class="nav-link" href="/services.html">Services</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Products</a>
+                  <a class="nav-link" href="/products.html">Products</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Portfolio</a>
+                  <a class="nav-link" href="/portfolio.html">Portfolio</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">About</a>
+                  <a class="nav-link" href="/aboutus.html">About</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#">Contact</a>
