--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Altairtech</title>
-    <link href="./css/altait.css" rel="stylesheet" />
+    <link href="./css/portfolio.css" rel="stylesheet" />
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -71,138 +71,74 @@
         </div>
       </nav>
     </div>
-    <!--header end  -->
-
-    <!-- Banner start -->
-
-    <div class="container">
-      <h2>Why Altair?</h2>
-      <p>
-        As a creative agency, we place the highest priority on the value we
-        deliver in all projects, big and small. At Altair, our projects are all
-        unique and driven by client needs. They require creative solutions from
-        a team drawn from a number of technology areas and diverse business
-        expertise.
-      </p>
-      <div>
-        <div class="row">
-          <div class="col-xs-12 col-sm-6 col-md-5">
-            <div class="card shadow">
-              <div class="card-body">
-                <h5 class="card-title">You.</h5>
-                <hr />
-                <p class="card-text">
-                  We enjoy working with our clients. There is no one more
-                  important. Since 1993, we start each day with an unwavering
-                  commitment to our clients’ success. Our customer service is
-                  fueled by our 30+ years’ experience delivering on time and
-                  within budget.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-xs-12 col-sm-6 col-md-4">
-            <div class="card shadow">
-              <div class="card-body">
-                <h5 class="card-title">Experience.</h5>
-                <hr />
-                <p class="card-text">
-                  We are the original web design & development company in San
-                  Antonio, Texas. We put businesses like yours on the internet
-                  for profitable gain. With 30+ years deploying technology
-                  solutions, we know how to build your application right the
-                  first time.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-xs-12 col-sm-6 col-md-3">
-            <img
-              src="/images/home/BootstrapsImages/alters/button-getnoticed02.png"
-              class="img-fluid"
-              alt="Responsive image"
-            />
-          </div>
-        </div>
-      </div>
-      <div>
-        <div class="row">
-          <div class="col-xs-12 col-sm-6 col-md-4">
-            <div class="card shadow">
-              <div class="card-body">
-                <h5 class="card-title">Project management.</h5>
-                <hr />
-                <p class="card-text">
-                  From the smallest to the most complex, project deliverables
-                  are managed in a workorder system down to the details. The
-                  underpinnings to every project’s success, our systematic
-                  approach to manage workflow ensures we deliver on time and
-                  inside your budget.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-xs-12 col-sm-6 col-md-4" style="margin-top: 20px">
-            <div class="card shadow">
-              <div class="card-body">
-                <h5 class="card-title">Experience.</h5>
-                <hr />
-                <p class="card-text">
-                  We are the original web design & development company in San
-                  Antonio, Texas. We put businesses like yours on the internet
-                  for profitable gain. With 30+ years deploying technology
-                  solutions, we know how to build your application right the
-                  first time.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div
-            class="col-xs-12 col-sm-6 col-md-3 custom-card"
-            style="margin-top: -60px; margin-left: 60px; margin-bottom: 20px"
+    <div
+      class="container moibile_view"
+      style="height: 70vh; width: 100vw; padding-top: 100px"
+    >
+      <div class="row justify-content-center text-center">
+        <div
+          class="col-12 col-sm-6 col-md-4 col-lg-3 mb-4"
+          style="margin: 10px 20px"
+        >
+          <img
+            src="/images/home/BootstrapsImages/portfolio/portfolio-splash-webdesign.png"
+            class="img-fluid"
+            alt="webdesign"
+          />
+          <p
+            style="
+              color: #3ec1ef;
+              font-weight: 600;
+              font-size: 18px;
+              white-space: nowrap;
+              margin-top: 10px;
+            "
           >
-            <div class="card shadow">
-              <div class="card-body">
-                <h5 class="card-title">Every page talks to Google.</h5>
-                <hr />
-                <p class="card-text">
-                  Your website is built with every web page optimized for Google
-                  and other search engines. The layout and functionality of each
-                  page is designed to get your visitor to click on links and
-                  make a purchase, begin a relationship with your business, or
-                  go the next step.
-                </p>
-              </div>
-            </div>
-            <div
-              class="card shadow custom-card"
-              style="margin-top: 10px; width: 400px; margin-left: -200px"
-            >
-              <div class="card-body">
-                <h5 class="card-title">We're listening.</h5>
-                <hr />
-                <p class="card-text">
-                  Our approach begins with listening. A collaborative evaluation
-                  of your business processes is key. From the joint analysis
-                  flows a strategy and plan for designing and deploying your
-                  next website.
-                </p>
-              </div>
-            </div>
-          </div>
+            Web Design
+          </p>
+        </div>
+        <div
+          class="col-12 col-sm-6 col-md-4 col-lg-3 mb-4"
+          style="margin: 10px 20px"
+        >
+          <img
+            src="/images/home/BootstrapsImages/portfolio/portfolio-splash-print.png"
+            class="img-fluid"
+            alt="print"
+          />
+          <p
+            style="
+              color: #3ec1ef;
+              font-weight: 600;
+              font-size: 18px;
+              white-space: nowrap;
+            "
+          >
+            Print & Collateral
+          </p>
+        </div>
+        <div
+          class="col-12 col-sm-6 col-md-4 col-lg-3 mb-4"
+          style="margin: 10px 20px"
+        >
+          <img
+            src="/images/home/BootstrapsImages/portfolio/portfolio-splash-logo.png"
+            class="img-fluid"
+            alt="logo"
+          />
+          <p
+            style="
+              color: #3ec1ef;
+              font-weight: 600;
+              font-size: 18px;
+              white-space: nowrap;
+            "
+          >
+            Logo Design
+          </p>
         </div>
       </div>
-
-      <p>
-        Clients include: Accion Texas, Bandag, Bridgestone/Firestone, Frost
-        Bank, Port San Antonio, San Antonio Economic Development Foundation, San
-        Antonio National Bank, US Army Medical Command, US Air Force, UNAM, UTSA
-        and numerous small and mid-size companies in San Antonio and beyond. We
-        provide turnkey solutions to businesses small, mid-size, and large.
-      </p>
     </div>
-
-    <!-- Banner end -->
 
     <!-- start footer -->
 
