--- a/products.html
+++ b/products.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Altairtech</title>
-    <link href="./css/altait.css" rel="stylesheet" />
+    <link href="./css/service.css" rel="stylesheet" />
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -72,140 +72,121 @@
       </nav>
     </div>
     <!--header end  -->
+    <!-- main start -->
 
-    <!-- Banner start -->
-
-    <div class="container">
-      <h2>Why Altair?</h2>
-      <p>
-        As a creative agency, we place the highest priority on the value we
-        deliver in all projects, big and small. At Altair, our projects are all
-        unique and driven by client needs. They require creative solutions from
-        a team drawn from a number of technology areas and diverse business
-        expertise.
-      </p>
+    <div class="container py-2">
+      <p style="font-size: 35px">Products</p>
       <div>
         <div class="row">
-          <div class="col-xs-12 col-sm-6 col-md-5">
-            <div class="card shadow">
-              <div class="card-body">
-                <h5 class="card-title">You.</h5>
-                <hr />
-                <p class="card-text">
-                  We enjoy working with our clients. There is no one more
-                  important. Since 1993, we start each day with an unwavering
-                  commitment to our clients’ success. Our customer service is
-                  fueled by our 30+ years’ experience delivering on time and
-                  within budget.
-                </p>
-              </div>
+          <div class="col-12 col-sm-6 col-md-2 mb-3">
+            <div>
+              <p
+                class="card-title"
+                style="margin-top: -5px; margin-bottom: -5px"
+              >
+                ACE
+              </p>
+              <hr />
+              <p
+                class="card-title"
+                style="margin-top: -5px; margin-bottom: -5px"
+              >
+                BizWeb
+              </p>
+              <hr />
+              <p
+                class="card-title"
+                style="margin-top: -5px; margin-bottom: -5px"
+              >
+                MedWeb
+              </p>
+              <hr />
+              <p
+                class="card-title"
+                style="margin-top: -5px; margin-bottom: -5px"
+              >
+                Mobile Solutions
+              </p>
+              <hr />
+              <p
+                class="card-title"
+                style="margin-top: -5px; margin-bottom: -5px"
+              >
+                Membership Manager
+              </p>
             </div>
           </div>
-          <div class="col-xs-12 col-sm-6 col-md-4">
-            <div class="card shadow">
-              <div class="card-body">
-                <h5 class="card-title">Experience.</h5>
-                <hr />
-                <p class="card-text">
-                  We are the original web design & development company in San
-                  Antonio, Texas. We put businesses like yours on the internet
-                  for profitable gain. With 30+ years deploying technology
-                  solutions, we know how to build your application right the
-                  first time.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-xs-12 col-sm-6 col-md-3">
-            <img
-              src="/images/home/BootstrapsImages/alters/button-getnoticed02.png"
-              class="img-fluid"
-              alt="Responsive image"
-            />
-          </div>
-        </div>
-      </div>
-      <div>
-        <div class="row">
-          <div class="col-xs-12 col-sm-6 col-md-4">
-            <div class="card shadow">
-              <div class="card-body">
-                <h5 class="card-title">Project management.</h5>
-                <hr />
-                <p class="card-text">
-                  From the smallest to the most complex, project deliverables
-                  are managed in a workorder system down to the details. The
-                  underpinnings to every project’s success, our systematic
-                  approach to manage workflow ensures we deliver on time and
-                  inside your budget.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-xs-12 col-sm-6 col-md-4" style="margin-top: 20px">
-            <div class="card shadow">
-              <div class="card-body">
-                <h5 class="card-title">Experience.</h5>
-                <hr />
-                <p class="card-text">
-                  We are the original web design & development company in San
-                  Antonio, Texas. We put businesses like yours on the internet
-                  for profitable gain. With 30+ years deploying technology
-                  solutions, we know how to build your application right the
-                  first time.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div
-            class="col-xs-12 col-sm-6 col-md-3 custom-card"
-            style="margin-top: -60px; margin-left: 60px; margin-bottom: 20px"
-          >
-            <div class="card shadow">
-              <div class="card-body">
-                <h5 class="card-title">Every page talks to Google.</h5>
-                <hr />
-                <p class="card-text">
-                  Your website is built with every web page optimized for Google
-                  and other search engines. The layout and functionality of each
-                  page is designed to get your visitor to click on links and
-                  make a purchase, begin a relationship with your business, or
-                  go the next step.
-                </p>
-              </div>
-            </div>
+          <div class="col-12 col-md-8 mb-3">
             <div
-              class="card shadow custom-card"
-              style="margin-top: 10px; width: 400px; margin-left: -200px"
+              class="card shadow"
+              style="padding-top: 10px; padding-bottom: 30px"
             >
               <div class="card-body">
-                <h5 class="card-title">We're listening.</h5>
+                <h5 class="card-title">
+                  Altair Commerce Engine - eCommerce Platform .
+                </h5>
                 <hr />
+                <h6 class="card-title">Website Design & Development.</h6>
                 <p class="card-text">
-                  Our approach begins with listening. A collaborative evaluation
-                  of your business processes is key. From the joint analysis
-                  flows a strategy and plan for designing and deploying your
-                  next website.
+                  Altair Technology builds custom website platforms that propel
+                  your business goals and position you above your competition.
+                  Our digital creative wins awards but the true reward is our
+                  client's success, a direct result of collaboration.
+                </p>
+                <h6 class="card-title">Website content.</h6>
+                <p class="card-text">
+                  A website's greatest strength is to present language
+                  compelling enough to get a click and a new sale. Altair will
+                  wordsmith your copy to persuasive perfection, or generate your
+                  copy from a blank canvas, at affordable rates.
+                </p>
+                <h6 class="card-title">Transparency.</h6>
+                <p class="card-text">
+                  In an increasingly complex internet, transparency puts you in
+                  the driver's seat. You will see your website developing online
+                  via private link from day 1. Scheduled updates and open
+                  communications provide peace of mind while regular reports
+                  keep you informed. Some websites only require 3 weeks to
+                  complete; complex websites normally take 45 days.
                 </p>
               </div>
             </div>
           </div>
+          <div class="col-12 col-md-2 ml-4">
+            <div class="box mb-3">
+              <div class="content">
+                <h4>Contact Altair today to discuss your project.</h4>
+                <p>Or request a free proposal.</p>
+              </div>
+            </div>
+            <button
+              style="
+                margin: 10px;
+                padding: 14px 42px;
+                border-radius: 4px;
+                background-color: #4686c2;
+                color: #ffffff;
+                font-size: 17px;
+                font-weight: 500;
+                border: none;
+                white-space: nowrap;
+              "
+            >
+              Contact us
+            </button>
+
+            <!--  -->
+            <div style="">
+              <img
+                src="/images/home/BootstrapsImages/alters/button-getnoticed02.png"
+                class="img-fluid"
+                alt="Responsive image"
+              />
+            </div>
+          </div>
         </div>
       </div>
-
-      <p>
-        Clients include: Accion Texas, Bandag, Bridgestone/Firestone, Frost
-        Bank, Port San Antonio, San Antonio Economic Development Foundation, San
-        Antonio National Bank, US Army Medical Command, US Air Force, UNAM, UTSA
-        and numerous small and mid-size companies in San Antonio and beyond. We
-        provide turnkey solutions to businesses small, mid-size, and large.
-      </p>
     </div>
-
-    <!-- Banner end -->
-
-    <!-- start footer -->
-
     <footer class="footer">
       <section
         class="py-10 py-md-5 py-xl-8 border-top border-light footer__css"
@@ -418,8 +399,7 @@
       </section>
     </footer>
 
-    <!-- end footer -->
-
+    <!-- main end -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
